hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics4.php.like_types.exp
File "tconst_on_generics4.php", line 32, characters 10-11:
Invalid return type (Typing[4110])
File "tconst_on_generics4.php", line 26, characters 16-18:
Expected int
File "tconst_on_generics4.php", line 21, characters 54-55:
But got dynamic because it is an unenforceable type
